[package]
name = "rrdt-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.1"
actix-rt = "2.9.0"
bytes = "1.5.0"
futures = "0.3.29"
rand = "0.8.5"
tokio = { version = "1.35.0", features = ["full"] }

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
